--- a/css/main.css
+++ b/css/main.css
@@ -165,17 +165,24 @@ li {
 .tour-form {
   display: flex;
   flex-direction: row;
-  margin-top: 22px;
 }
 
 .tour-selector {
   width: 80px;
-  margin-right: 25px;
+  margin-right: 45px;
 }
 
 .tour-selector:last-child {
-  margin-right: 0;
+  margin-right: 0px;
   box-sizing: border-box;
+}
+
+.tour-selector__nights {
+  width: 94px;
+}
+
+.tour-selector__persons {
+  width: 110px;
 }
 
 .selector {
@@ -221,6 +228,26 @@ li {
   height: 20px;
 }
 
+.selector-option__nights {
+  width: 100%;
+  border: none;
+  font-family: "Montserrat";
+  font-size: 15px;
+  font-weight: 700;
+  color: #202020;
+  padding-top: 5px;
+}
+
+.selector-option__persons {
+  width: 100%;
+  border: none;
+  font-family: "Montserrat";
+  font-size: 15px;
+  font-weight: 700;
+  color: #202020;
+  padding-top: 5px;
+}
+
 .selector__wrapper {
   margin-top: 5px;
 }
@@ -260,5 +287,6 @@ li {
   font-family: "Montserrat";
   offset: 5px;
   box-shadow: 0px 5px 15px rgba(251, 76, 31, 0.25);
+  margin-top: 3px;
 }
 /*# sourceMappingURL=main.css.map */
