--- a/scss/main.scss
+++ b/scss/main.scss
@@ -161,14 +161,19 @@ li {
     &-form {
         display: flex;
         flex-direction: row;
-        margin-top: 22px;
     }
     &-selector {
         width: 80px;
-        margin-right: 25px;
+        margin-right: 45px;
         &:last-child {
-            margin-right: 0;
+            margin-right: 0px;
             box-sizing: border-box;
+        }
+        &__nights {
+            width: 94px;
+        }
+        &__persons{
+            width: 110px;
         }
     }
 }
@@ -211,6 +216,24 @@ li {
             width: 80px;
             height: 20px;
         }
+        &__nights {
+            width: 100%;
+            border: none;
+            font-family: $font;
+            font-size: 15px;
+            font-weight: 700;
+            color: $primaryText;
+            padding-top: 5px;
+        }
+        &__persons {
+            width: 100%;
+            border: none;
+            font-family: $font;
+            font-size: 15px;
+            font-weight: 700;
+            color: $primaryText;
+            padding-top: 5px;
+        }
     }
     &__wrapper {
         margin-top: 5px;
@@ -248,5 +271,8 @@ li {
         font-family: $font;
         offset: 5px;
         box-shadow: 0px 5px 15px rgba(251, 76, 31, 0.25);
+        margin: {
+            top: 3px; 
+        }
     }
 }
