--- a/css/tours.css
+++ b/css/tours.css
@@ -1,3 +1,26 @@
+.item-flight .flight-item label {
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+  padding-left: 20px;
+  margin-right: 0;
+  line-height: 18px;
+  user-select: none;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.item-flight .flight-item label::before, .item-flight .flight-item label:before {
+  content: "";
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  left: 0;
+  bottom: 2px;
+  background: url(../assets/icons/no-active-radio.png) 0 0 no-repeat;
+}
+
 h1,
 h2,
 h3,
@@ -56,13 +79,13 @@ li {
   font-weight: 500;
   font-size: 14px;
   margin-right: 30px;
-  color: #000;
+  color: #202020;
   z-index: 1;
 }
 
 .nav-link:visited {
   text-decoration: none;
-  color: #fff;
+  color: #202020;
 }
 
 .nav-link img {
@@ -97,7 +120,7 @@ li {
 .header-and-help {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .help {
@@ -170,4 +193,225 @@ li {
   background-color: #fff;
   border-radius: 15px;
   border: none;
+}
+
+.filters {
+  display: flex;
+  margin-top: 35px;
+}
+
+.filters-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.filters-list__item {
+  margin-left: 45px;
+}
+
+.filters-list__item:first-child {
+  margin-left: 0px;
+}
+
+.filters-label {
+  font-size: 18px;
+  font-weight: 700;
+  color: #202020;
+}
+
+.filters-aside {
+  flex-direction: column;
+  margin-left: 30px;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 15px;
+  width: 15px;
+  border-radius: 10px;
+  background: #f2f2f2;
+  cursor: pointer;
+  margin-top: -5px;
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.15);
+}
+
+input[type=range]::-moz-range-thumb {
+  -webkit-appearance: none;
+  height: 15px;
+  width: 15px;
+  border-radius: 10px;
+  background: #f2f2f2;
+  cursor: pointer;
+  margin-top: -14px;
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.15);
+}
+
+input[type=range]::-ms-thumb {
+  -webkit-appearance: none;
+  height: 15px;
+  width: 15px;
+  border-radius: 10px;
+  background: #f2f2f2;
+  cursor: pointer;
+  margin-top: -14px;
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.15);
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  background: #ec8f36;
+  border-radius: 3px;
+}
+
+input[type=radio] {
+  display: none;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: #202020;
+}
+
+.item-price {
+  width: 205px;
+}
+
+.item-price__value {
+  font-size: 12px;
+  font-weight: 600;
+  padding-top: 10px;
+}
+
+.item-price__ranger {
+  margin-top: 15px;
+}
+
+.item-price__splitter {
+  position: relative;
+  width: 15px;
+  height: 35px;
+  display: block;
+  z-index: 1;
+}
+
+.item-price__splitter::after {
+  position: absolute;
+  background: #202020;
+  margin: 0 auto;
+  height: 2px;
+  width: 100%;
+  z-index: 1;
+  content: "";
+  top: 16px;
+}
+
+.item-price__inputs {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+}
+
+.item-price__inputs .price__input {
+  width: 85px;
+  height: 35px;
+  border: 1px solid #C4C4C4;
+  background: #F2F2F2;
+  box-sizing: border-box;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 7px;
+  font-family: "Montserrat";
+  font-weight: 500;
+  color: #6a6a6a;
+  font-size: 14px;
+}
+
+.item-price__inputs .min-price {
+  padding: 9px 19px;
+  margin-right: 10px;
+}
+
+.item-price__inputs .max-price {
+  padding: 9px 14px;
+  margin-left: 10px;
+}
+
+.item-flight {
+  padding-top: 35px;
+}
+
+.item-flight .flight-options {
+  display: flex;
+  flex-direction: row;
+  padding-top: 10px;
+}
+
+.item-flight .flight-item {
+  padding-right: 20px;
+}
+
+.item-flight .flight-item input[type=radio]:checked + label:before {
+  background: url("../assets/icons/active-radio.png") 0 0 no-repeat;
+}
+
+.item-flight .flight-item:last-child {
+  padding-right: 0px;
+}
+
+.item-label {
+  display: flex;
+  align-items: flex-start;
+  font-size: 18px;
+  color: #202020;
+}
+
+.item-label label {
+  font-weight: 600;
+  margin-left: 5px;
+}
+
+.item-selector {
+  margin-left: 25px;
+  margin-top: 5px;
+  border: none;
+  font-family: inherit;
+  appearance: none;
+  font-weight: 500;
+  color: #6a6a6a;
+  font-size: 14px;
+}
+
+.item-input {
+  margin-left: 25px;
+  margin-top: 5px;
+  border: none;
+  font-weight: 500;
+  color: #6a6a6a;
+  font-size: 14px;
+  font-family: "Montserrat";
+  width: 150px;
 }
