--- a/scss/tours.scss
+++ b/scss/tours.scss
@@ -3,6 +3,29 @@ $secondaryText: #6a6a6a;
 $accent: #ec8f36;
 $font: "Montserrat";
 
+%radio {
+    display: inline-block;
+    cursor: pointer;
+    position: relative;
+    padding-left: 20px;
+    margin-right: 0;
+    line-height: 18px;
+    user-select: none;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+%radio::before {
+    content: "";
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    left: 0;
+    bottom: 2px;
+    background: url(../assets/icons/no-active-radio.png) 0 0 no-repeat;
+}
+
 h1,
 h2,
 h3,
@@ -61,11 +84,11 @@ li {
         font-weight: 500;
         font-size: 14px;
         margin-right: 30px;
-        color: #000;
+        color: $primaryText;
         z-index: 1;
         &:visited {
             text-decoration: none;
-            color: #fff;
+            color: $primaryText;
         }
         img {
             margin-left: 10px;
@@ -98,7 +121,7 @@ li {
 .header-and-help {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .help {
@@ -164,5 +187,218 @@ li {
         background-color: #fff;
         border-radius: 15px;
         border: none;
+    }
+}
+
+.filters {
+    display: flex;
+    margin-top: 35px;
+    &-list {
+        display: flex;
+        flex-direction: row;
+        &__item {
+            margin-left: 45px;
+        }
+        &__item:first-child {
+            margin-left: 0px;
+        }
+    }
+    &-label {
+        font-size: 18px;
+        font-weight: 700;
+        color: $primaryText;
+    }
+    &-aside {
+        flex-direction: column;
+        margin-left: 30px;
+
+    }
+}
+
+input[type=range] {
+  -webkit-appearance: none; 
+  width: 100%; 
+}
+ 
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+ 
+input[type=range]:focus {
+  outline: none; 
+}
+ 
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+  background: transparent; 
+  border-color: transparent;
+  color: transparent;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 15px;
+    width: 15px;
+    border-radius: 10px;
+    background: #f2f2f2;
+    cursor: pointer;
+    margin-top: -5px; 
+    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.15);
+}
+ 
+input[type=range]::-moz-range-thumb {
+    -webkit-appearance: none;
+    height: 15px;
+    width: 15px;
+    border-radius: 10px;
+    background: #f2f2f2;
+    cursor: pointer;
+    margin-top: -14px; 
+    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.15);
+}
+ 
+input[type=range]::-ms-thumb {
+    -webkit-appearance: none;
+    height: 15px;
+    width: 15px;
+    border-radius: 10px;
+    background: #f2f2f2;
+    cursor: pointer;
+    margin-top: -14px; 
+    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.15);
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    background: $accent;
+    border-radius: 3px;
+}
+
+input[type=radio] {
+    display: none;
+}
+
+.item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color: $primaryText;
+    &-price {
+        width: 205px;
+        &__value {
+            font-size: 12px;
+            font-weight: 600;
+            padding-top: 10px;
+        }
+        &__ranger {
+            margin-top: 15px;
+        }
+        &__splitter {
+            position: relative;
+            width: 15px;
+            height: 35px;
+            display: block;
+            z-index: 1;
+        }
+        &__splitter::after {
+            position: absolute;
+            background: $primaryText;
+            margin: 0 auto;
+            height: 2px;
+            width: 100%;
+            z-index: 1;
+            content: "";
+            top: 16px;
+        }
+        &__inputs {
+            display: flex;
+            flex-direction: row;
+            margin-top: 15px;
+            .price__input {
+                width: 85px;
+                height: 35px;
+                border: 1px solid #C4C4C4;
+                background: #F2F2F2;
+                box-sizing: border-box;
+                box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+                border-radius: 7px;
+                font-family: $font;
+                font-weight: 500;
+                color: $secondaryText;
+                font-size: 14px;
+            }
+            .min-price {
+                padding: 9px 19px;
+                margin-right: 10px;
+            }
+            .max-price {
+                padding: 9px 14px;
+                margin-left: 10px;
+            }
+        }
+        
+    }
+    &-flight {
+        padding-top: 35px;
+        .flight-options {
+            display: flex;
+            flex-direction: row;
+            padding-top: 10px;
+        }
+        .flight-item {
+            padding-right: 20px;
+            label {
+                @extend %radio;
+            }
+            label:before {
+                @extend %radio::before;
+            }
+            input[type=radio]:checked + label:before {
+                background: url('../assets/icons/active-radio.png') 0 0 no-repeat;
+            }
+        }
+        .flight-item:last-child {
+            padding-right: 0px;
+        }
+    }
+    &-label {
+        display: flex;
+        align-items: flex-start;
+        font-size: 18px;
+        color: $primaryText;
+        label {
+            font-weight: 600;
+            margin-left: 5px;
+        }
+        
+    }
+    &-selector {
+        margin: {
+            left: 25px;
+            top: 5px;
+        }
+        border: none;
+        font-family: inherit;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        font-weight: 500;
+        color: $secondaryText;
+        font-size: 14px;
+    }
+    &-input {
+        margin: {
+            left: 25px;
+            top: 5px;
+        }
+        border:none;
+        font-weight: 500;
+        color: $secondaryText;
+        font-size: 14px;
+        font-family: $font;
+        width: 150px;
     }
 }
