--- a/css/tours.css
+++ b/css/tours.css
@@ -21,6 +21,35 @@
   background: url(../assets/icons/no-active-radio.png) 0 0 no-repeat;
 }
 
+.item-accomodation .checkbox-item input[type=checkbox] + label, .item-accomodation-tourtype .checkbox1-item input[type=checkbox] + label {
+  display: inline-block;
+  position: relative;
+  padding-left: 25px;
+  margin-right: 0px;
+  user-select: none;
+  font-size: 14px;
+  font-weight: 500;
+  color: #202020;
+}
+
+.item-accomodation .checkbox-item input[type=checkbox] + label::before, .item-accomodation-tourtype .checkbox1-item input[type=checkbox] + label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  background: url("../assets/icons/non-active-checkbox.png") 0 0 no-repeat;
+  width: 20px;
+  height: 20px;
+}
+
+.item-accomodation .checkbox-item input[type=checkbox]:checked + label::after, .item-accomodation-tourtype .checkbox1-item input[type=checkbox]:checked + label::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  background: url("../assets/icons/active-checkbox.png") 0 0 no-repeat;
+  width: 20px;
+  height: 20px;
+}
+
 h1,
 h2,
 h3,
@@ -125,6 +154,8 @@ li {
 
 .help {
   width: 684px;
+  height: 235px;
+  border-radius: 15px;
   background: url("../assets/pictures/page_tours/help-background.png") no-repeat;
   display: flex;
   flex-direction: row;
@@ -132,6 +163,7 @@ li {
   align-items: center;
   margin-left: 69px;
   color: #fff;
+  box-shadow: 0px 10px 25px 0px #00000026;
 }
 
 .help-text {
@@ -224,6 +256,10 @@ li {
   margin-left: 30px;
 }
 
+.filters-aside__item {
+  margin-bottom: 35px;
+}
+
 input[type=range] {
   -webkit-appearance: none;
   width: 100%;
@@ -287,6 +323,10 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 
 input[type=radio] {
+  display: none;
+}
+
+input[type=checkbox] {
   display: none;
 }
 
@@ -360,10 +400,6 @@ input[type=radio] {
   margin-left: 10px;
 }
 
-.item-flight {
-  padding-top: 35px;
-}
-
 .item-flight .flight-options {
   display: flex;
   flex-direction: row;
@@ -380,6 +416,26 @@ input[type=radio] {
 
 .item-flight .flight-item:last-child {
   padding-right: 0px;
+}
+
+.item-accomodation .checkbox {
+  padding-top: 10px;
+}
+
+.item-accomodation .checkbox-item {
+  padding-bottom: 15px;
+}
+
+.item-accomodation .checkbox-item:last-child {
+  padding-bottom: 0px;
+}
+
+.item-accomodation-tourtype .checkbox1 {
+  padding-top: 10px;
+}
+
+.item-accomodation-tourtype .checkbox1-item {
+  padding-bottom: 15px;
 }
 
 .item-label {
