--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,17 +21,8 @@ li {
     background-repeat: no-repeat;
     height: 100vh;
     position: relative;
-    &::before {
-        content: "";
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        background: black;
-        opacity: 0.4;
-        z-index: 0;
-    }
     &-container {
-        width: 1349px;
+        width: 100%;
         margin: 0 auto;
     }
 }
@@ -42,7 +33,7 @@ li {
     justify-content: space-between;
     align-items: center;
     padding-top: 20px;
-    z-index: 1;
+    position: relative;
 }
 
 /* Burger menu opener */
@@ -56,26 +47,165 @@ li {
 }
 
 .burger-opener span,
-.burger-opener::before,
-.burger-opener::after {
+.burger-opener::before {
     height: 2px;
     width: 100%;
     position: absolute;
     background: #fff;
     margin: 0 auto;
     z-index: 1;
+    transition: all 0.3s ease-out;
 }
 
-.burger-opener::before,
-.burger-opener::after {
+.burger-opener::before {
     content: "";
-    z-index: 1;
-}
-
-.burger-opener:after {
     top: 7px;
     z-index: 1;
 }
+
+
+
+.burger {
+    background: #fff;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    position: absolute;
+    display: none;
+    &-links__list {
+        display: flex;
+        flex-direction: column;
+        margin: {
+            left: 360px;
+            top: 89px;
+        }
+    }
+    &-list__item {
+        padding-top: 35px;
+    }
+    &-list__item:first-child {
+        padding-top: 0px;
+    }
+    &-link {
+        text-decoration: none;
+        &__header {
+            font-size: 36px;
+            font-weight: 600;
+            color: $primaryText;
+            padding-bottom: 5px;
+        }
+        &__description {
+            font-size: 16px;
+            font-weight: 400;
+            color: $secondaryText;
+        }
+    }
+}
+
+.active {
+    display: block;
+}
+
+.burger-active {
+    &::before, & span {
+        background: #000;
+        
+    }
+    &::before {
+        transform: rotate(45deg);
+        top: 0px;
+    }
+    & span {
+        transform: rotate(-45deg);
+    }
+}
+
+.animated-item {
+    &__first {
+        animation: main-link__animation 0.30s ease-in-out 0.30s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    &__second {
+        animation: tours-link__animation 0.30s ease-out 0.60s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    &__thrid {
+        animation: cabinet-link__animation 0.30s ease-out 0.90s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    &__fourth {
+        animation: help-link__animation 0.30s ease-out 1.20s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    &__fifth {
+        animation: about-link__animation 0.30s ease-out 1.50s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+}
+
+@keyframes main-link__animation {
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+
+@keyframes tours-link__animation {
+
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+
+@keyframes cabinet-link__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+@keyframes help-link__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+@keyframes about-link__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+ 
 
 .cabinet-link {
     display: flex;
@@ -109,7 +239,6 @@ li {
     font-size: 48px;
     text-align: center;
     color: #fff;
-    z-index: 1;
 }
 
 .offer-description {
@@ -120,7 +249,6 @@ li {
     line-height: 22px;
     width: 550px;
     padding-top: 15px;
-    z-index: 1;
 }
 
 .header-styler {
@@ -139,7 +267,6 @@ li {
     display: flex;
     flex-direction: row;
     align-items: center;
-    position: sticky;
     p {
         width: 129px;
         font-weight: 700;
@@ -176,6 +303,10 @@ li {
             width: 110px;
         }
     }
+}
+
+.hided {
+    display: none;
 }
 
 .selector {
