--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ li {
   width: 30px;
   height: 8px;
   display: block;
-  margin-left: 25px;
+  margin-left: 30px;
   z-index: 1;
 }
 
@@ -107,7 +107,7 @@ li {
 }
 
 .burger-active::before, .burger-active span {
-  background: #000;
+  background: #202020;
 }
 
 .burger-active::before {
@@ -117,6 +117,36 @@ li {
 
 .burger-active span {
   transform: rotate(-45deg);
+}
+
+.animated__opener {
+  animation: burger-opener__animation 0.30s ease-out 0.8s 1 normal forwards;
+  opacity: 0;
+  transform: translate(-25px, 0);
+}
+
+.animated-cabinet__link {
+  animation: cabinet-link__animation 0.30s ease-out 1.1s 1 normal forwards;
+  opacity: 0;
+  transform: translate(25px, 0);
+}
+
+.animated-header {
+  animation: offer-header__animation 0.60s ease-out 1.4s 1 normal forwards;
+  opacity: 0;
+  transform: translate(0, 25px);
+}
+
+.animated-description {
+  animation: offer-description__animation 0.40s ease-in-out 1.7s 1 normal forwards;
+  opacity: 0;
+  transform: translate(0, 25px);
+}
+
+.animated-toursearcher {
+  animation: tour-searcher__animation 0.80s ease-in-out 2.1s 1 normal forwards;
+  opacity: 0;
+  transform: translate(0, 25px);
 }
 
 .animated-item__first {
@@ -149,61 +179,6 @@ li {
   transform: translate(0, 25px);
 }
 
-@keyframes main-link__animation {
-  from {
-    opacity: 0;
-    transform: translate(0, 25px);
-  }
-  to {
-    opacity: 1;
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes tours-link__animation {
-  from {
-    opacity: 0;
-    transform: translate(0, 25px);
-  }
-  to {
-    opacity: 1;
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes cabinet-link__animation {
-  from {
-    opacity: 0;
-    transform: translate(0, 25px);
-  }
-  to {
-    opacity: 1;
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes help-link__animation {
-  from {
-    opacity: 0;
-    transform: translate(0, 25px);
-  }
-  to {
-    opacity: 1;
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes about-link__animation {
-  from {
-    opacity: 0;
-    transform: translate(0, 25px);
-  }
-  to {
-    opacity: 1;
-    transform: translate(0, 0);
-  }
-}
-
 .cabinet-link {
   display: flex;
   flex-direction: row;
@@ -212,7 +187,6 @@ li {
   font-size: 14px;
   margin-right: 30px;
   color: #fff;
-  z-index: 1;
 }
 
 .cabinet-link:visited {
@@ -418,4 +392,114 @@ li {
   offset: 5px;
   box-shadow: 0px 5px 15px rgba(251, 76, 31, 0.25);
   margin-top: 3px;
+}
+
+@keyframes burger-opener__animation {
+  from {
+    opacity: 0;
+    transform: translate(-25px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes cabinet-link__animation {
+  from {
+    opacity: 0;
+    transform: translate(25px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes offer-header__animation {
+  from {
+    opacity: 0;
+    transform: translate(0, 25px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes offer-description__animation {
+  from {
+    opacity: 0;
+    transform: translate(0, 25px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes tour-searcher__animation {
+  from {
+    opacity: 0;
+    transform: translate(0, 25px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes main-link__animation {
+  from {
+    opacity: 0;
+    transform: translate(0, 25px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes tours-link__animation {
+  from {
+    opacity: 0;
+    transform: translate(0, 25px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes cabinet-link__animation {
+  from {
+    opacity: 0;
+    transform: translate(0, 25px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes help-link__animation {
+  from {
+    opacity: 0;
+    transform: translate(0, 25px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes about-link__animation {
+  from {
+    opacity: 0;
+    transform: translate(0, 25px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
 }
