--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,7 +42,7 @@ li {
     width: 30px;
     height: 8px;
     display: block;
-    margin-left: 25px;
+    margin-left: 30px;
     z-index: 1;
 }
 
@@ -62,8 +62,6 @@ li {
     top: 7px;
     z-index: 1;
 }
-
-
 
 .burger {
     background: #fff;
@@ -109,7 +107,7 @@ li {
 
 .burger-active {
     &::before, & span {
-        background: #000;
+        background: $primaryText;
         
     }
     &::before {
@@ -118,6 +116,34 @@ li {
     }
     & span {
         transform: rotate(-45deg);
+    }
+}
+
+.animated {
+    &__opener {
+        animation: burger-opener__animation 0.30s ease-out 0.8s 1 normal forwards;
+        opacity: 0;
+        transform: translate(-25px, 0);
+    }
+    &-cabinet__link {
+        animation: cabinet-link__animation 0.30s ease-out 1.1s 1 normal forwards;
+        opacity: 0;
+        transform: translate(25px, 0);
+    }
+    &-header {
+        animation: offer-header__animation 0.60s ease-out 1.4s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    &-description {
+        animation: offer-description__animation 0.40s ease-in-out 1.7s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    &-toursearcher {
+        animation: tour-searcher__animation 0.80s ease-in-out 2.1s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
     }
 }
 
@@ -149,64 +175,6 @@ li {
     }
 }
 
-@keyframes main-link__animation {
-    from{
-        opacity: 0;
-        transform: translate(0, 25px);
-    }
-    to{
-        opacity: 1;
-        transform: translate(0,0);
-    }
-}
-
-@keyframes tours-link__animation {
-
-    from{
-        opacity: 0;
-        transform: translate(0, 25px);
-    }
-    to{
-        opacity: 1;
-        transform: translate(0,0);
-    }
-}
-
-@keyframes cabinet-link__animation {
-    
-    from{
-        opacity: 0;
-        transform: translate(0, 25px);
-    }
-    to{
-        opacity: 1;
-        transform: translate(0,0);
-    }
-}
-@keyframes help-link__animation {
-    
-    from{
-        opacity: 0;
-        transform: translate(0, 25px);
-    }
-    to{
-        opacity: 1;
-        transform: translate(0,0);
-    }
-}
-@keyframes about-link__animation {
-    
-    from{
-        opacity: 0;
-        transform: translate(0, 25px);
-    }
-    to{
-        opacity: 1;
-        transform: translate(0,0);
-    }
-}
- 
-
 .cabinet-link {
     display: flex;
     flex-direction: row;
@@ -215,7 +183,6 @@ li {
     font-size: 14px;
     margin-right: 30px;
     color: #fff;
-    z-index: 1;
     &:visited {
         text-decoration: none;
         color: #fff;
@@ -407,3 +374,118 @@ li {
         }
     }
 }
+
+@keyframes burger-opener__animation {
+
+    from{
+        opacity: 0;
+        transform: translate(-25px, 0);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+@keyframes cabinet-link__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(25px, 0);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+
+@keyframes offer-header__animation {
+
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+@keyframes offer-description__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+@keyframes tour-searcher__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+
+@keyframes main-link__animation {
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+
+@keyframes tours-link__animation {
+
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+
+@keyframes cabinet-link__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+@keyframes help-link__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+@keyframes about-link__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+ 
