--- a/scss/tours.scss
+++ b/scss/tours.scss
@@ -68,7 +68,7 @@ li {
     font-family: $font;
 }
 
-.nav {
+.nav-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -77,52 +77,140 @@ li {
         top: 20px;
         bottom: 35px;
     }
+    position: relative;
+    width: 100%;
+
+}
+
+/* Burger menu opener */
+.burger-opener {
+    position: relative;
+    width: 30px;
+    height: 8px;
+    display: block;
+    margin-left: 30px;
     z-index: 1;
-    &-burger {
-        position: relative;
-        width: 30px;
-        height: 8px;
-        display: block;
-        margin-left: 30px;
-        z-index: 1;
-        span,
-        &::after,
-        &::before  
-        {
-            height: 2px;
-            width: 100%;
-            position: absolute;
-            background: #303030;
-            margin: 0 auto;
-            z-index: 1;
-        }
-        &::after {
-            top: 7px;
-            z-index: 1;
-        }
-        &::before,
-        &::after {
-            content: "";
-            z-index: 1;
+}
+
+.burger-opener span,
+.burger-opener::before {
+    height: 2px;
+    width: 100%;
+    position: absolute;
+    background: $primaryText;
+    margin: 0 auto;
+    z-index: 1;
+    transition: all 0.3s ease-out;
+}
+
+.burger-opener::before {
+    content: "";
+    top: 7px;
+    z-index: 1;
+}
+
+.burger {
+    background: #fff;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    position: absolute;
+    display: none;
+    &-links__list {
+        display: flex;
+        flex-direction: column;
+        margin: {
+            left: 360px;
+            top: 89px;
         }
     }
+    &-list__item {
+        padding-top: 35px;
+    }
+    &-list__item:first-child {
+        padding-top: 0px;
+    }
     &-link {
-        display: flex;
-        flex-direction: row;
         text-decoration: none;
-        font-weight: 500;
-        font-size: 14px;
-        margin-right: 30px;
-        color: $primaryText;
-        z-index: 1;
-        &:visited {
-            text-decoration: none;
+        &__header {
+            font-size: 36px;
+            font-weight: 600;
             color: $primaryText;
+            padding-bottom: 5px;
         }
-        img {
-            margin-left: 10px;
+        &__description {
+            font-size: 16px;
+            font-weight: 400;
+            color: $secondaryText;
         }
-    } 
+    }
+}
+
+.active {
+    display: block;
+}
+
+.burger-active {
+    &::before, & span {
+        background: #303030;
+    }
+    &::before {
+        transform: rotate(45deg);
+        top: 0px;
+    }
+    & span {
+        transform: rotate(-45deg);
+    }
+}
+
+.hided {
+    display: none;
+}
+
+.animated-item {
+    &__first {
+        animation: main-link__animation 0.30s ease-in-out 0.30s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    &__second {
+        animation: tours-link__animation 0.30s ease-out 0.60s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    &__thrid {
+        animation: cabinet-link__animation 0.30s ease-out 0.90s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    &__fourth {
+        animation: help-link__animation 0.30s ease-out 1.20s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    &__fifth {
+        animation: about-link__animation 0.30s ease-out 1.50s 1 normal forwards;
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+}
+
+.cabinet-link {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    margin-right: 30px;
+    color: $primaryText;
+    &:visited {
+        text-decoration: none;
+        color: $primaryText;
+    }
+    img {
+        margin-left: 10px;
+    }
 }
 
 .header {
@@ -594,4 +682,61 @@ input[type=checkbox] {
         color: #fff;
     }
 
+}
+
+@keyframes main-link__animation {
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+
+@keyframes tours-link__animation {
+
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+
+@keyframes cabinet-link__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+@keyframes help-link__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
+}
+@keyframes about-link__animation {
+    
+    from{
+        opacity: 0;
+        transform: translate(0, 25px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0,0);
+    }
 }
